--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,27 @@
+# name: Spell Check
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   spellcheck:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
+
+#       - name: Install aspell
+#         run: sudo apt-get install aspell
+
+#       - name: Spell check markdown files
+#         run: |
+#           for file in $(git diff --name-only --diff-filter=d "$(git log -1 --format='%H')"); do
+#             if [[ $file == *.md ]]; then
+#               aspell --lang=en list -t "$file"
+#             fi
+#           done
 name: Spell Check
 
 on:
@@ -12,13 +36,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Install aspell
-        run: sudo apt-get install aspell
+      - name: Install markdown-spellcheck
+        run: npm install -g markdown-spellcheck
 
       - name: Spell check markdown files
-        run: |
-          for file in $(git diff --name-only --diff-filter=d "$(git log -1 --format='%H')"); do
-            if [[ $file == *.md ]]; then
-              aspell --lang=en list -t "$file"
-            fi
-          done
+        run: markdown-spellcheck '**/*.md'
